# tracey

./: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum
antagonism/: BUILD.bazel  antagonism.go  antagonism_test.go
critical_path/: BUILD.bazel  cache.go  critical_path.go  critical_path_strategies.go  critical_path_test.go  critical_path_types.go  finder.go  finder_test.go
drag/: BUILD.bazel  drag.go  drag_test.go
marks/: BUILD.bazel  annotator.go  annotator_test.go
smart_dependencies/: BUILD.bazel  smart_dependencies.go  smart_dependencies_test.go
spawning/: BUILD.bazel  matching.go  matching_test.go  spawning_forest.go  spawning_forest_test.go
stitch/: BUILD.bazel  stitch.go  stitch_test.go  stitching.go
test_trace/: BUILD.bazel  prettyprint.go  test_trace_builder.go  test_trace_test.go  test_traces.go
tools/: format.sh
trace/: BUILD.bazel  check.go  check_test.go  matching.go  matching_test.go  paths_test.go  position.go  position_test.go  selection_test.go  trace.go  trace_test.go
trace/parser/: BUILD.bazel  parser.go  parser.y  parser_test.go
trace/parser/lexer/: BUILD.bazel  lexer.go
trace/parser/predicate/: BUILD.bazel  predicate.go
trace/parser/prefix_tree/: BUILD.bazel
transform/: BUILD.bazel  transform.go  transform_test.go  transforming_dependency.go  transforming_elementary_span.go  transforming_span.go  transforming_trace.go  types.go
transform/parser/: BUILD.bazel  parser.go  parser.y  parser_test.go
