module(
    name = "tracey",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.50.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.0",
)
go_sdk.nogo(nogo = "//:nogo")
use_repo(go_sdk, "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "org_golang_x_tools",
)
