load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stitch",
    srcs = [
        "stitch.go",
        "stitching.go",
    ],
    importpath = "github.com/ilhamster/tracey/stitch",
    visibility = ["//visibility:public"],
    deps = [
        "//trace",
        "//trace/parser",
    ],
)

go_test(
    name = "stitch_test",
    srcs = ["stitch_test.go"],
    embed = [":stitch"],
    deps = [
        "//test_trace",
        "//trace",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
