load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "transform",
    srcs = [
        "transform.go",
        "transforming_dependency.go",
        "transforming_elementary_span.go",
        "transforming_span.go",
        "transforming_trace.go",
        "types.go",
    ],
    importpath = "github.com/ilhamster/tracey/transform",
    visibility = ["//visibility:public"],
    deps = [
        "//trace",
        "//trace/parser",
    ],
)

go_test(
    name = "transform_test",
    srcs = ["transform_test.go"],
    embed = [":transform"],
    deps = [
        "//test_trace",
        "//trace",
        "//trace/parser",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
